src/lex/src/snapshots/lex__tests__snapshot_test.snap
---
source: src/lib.rs
expression: "Lexer::lex(source)"
---
TokenizedOutput {
    tokens: [],
    token_sources: [],
    lines: [
        Line {
            start: 0,
            end: 0,
        },
    ],
}
